@@ -1,12 +1,12 @@
 package servlet;
 
 import java.io.IOException;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
@@ -14,24 +14,24 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import model.Music;
 import model.MusicComment;
-import model.User; // Ensure this import exists
-import controller.MusicCommentController;
+import model.Celebrity;
+import model.User;
 import controller.MusicControllerImplements;
-import utility.DatabaseConnection;
+import controller.MusicCommentController;
+import controller.CelebrityControllerImplements;
 
-/**
- * Servlet implementation class UserMusicServlet
- */
 @WebServlet({"/music", "/music-detail"})
 public class UserMusicServlet extends HttpServlet {
     private static final long serialVersionUID = 1L;
     private MusicControllerImplements musicController;
     private MusicCommentController commentController;
+    private CelebrityControllerImplements celebrityController;
 
     @Override
     public void init() throws ServletException {
         musicController = new MusicControllerImplements();
         commentController = new MusicCommentController();
+        celebrityController = new CelebrityControllerImplements();
     }
 
     @Override
@@ -59,7 +59,17 @@ public class UserMusicServlet extends HttpServlet {
                         .collect(Collectors.toList());
             }
 
+            Map<Integer, List<Celebrity>> musicCelebritiesMap = new HashMap<>();
+            for (Music music : musicList) {
+                List<Integer> celebrityIds = music.getCelebrityIds();
+                List<Celebrity> celebrities = (celebrityIds != null && !celebrityIds.isEmpty()) ? 
+                    celebrityController.getCelebritiesByIds(celebrityIds) : 
+                    Collections.emptyList();
+                musicCelebritiesMap.put(music.getId(), celebrities != null ? celebrities : Collections.emptyList());
+            }
+
             request.setAttribute("musicList", musicList);
+            request.setAttribute("musicCelebritiesMap", musicCelebritiesMap);
             request.setAttribute("searchQuery", searchQuery);
             request.setAttribute("selectedGenre", selectedGenre);
             request.getRequestDispatcher("/user-side/music.jsp").forward(request, response);
@@ -72,13 +82,18 @@ public class UserMusicServlet extends HttpServlet {
                     if (!musicList.isEmpty()) {
                         Music music = musicList.get(0);
                         List<MusicComment> comments = commentController.getCommentsByMusicId(id);
+                        List<Integer> celebrityIds = music.getCelebrityIds();
+                        List<Celebrity> celebrities = (celebrityIds != null && !celebrityIds.isEmpty()) ? 
+                            celebrityController.getCelebritiesByIds(celebrityIds) : 
+                            Collections.emptyList();
                         request.setAttribute("music", music);
-                        request.setAttribute("comments", comments != null ? comments : List.of());
+                        request.setAttribute("comments", comments != null ? comments : Collections.emptyList());
+                        request.setAttribute("celebrities", celebrities != null ? celebrities : Collections.emptyList());
                         request.getRequestDispatcher("/user-side/music-detail.jsp").forward(request, response);
                     } else {
                         response.sendRedirect(request.getContextPath() + "/music?error=music_not_found");
                     }
-                } catch (NumberFormatException | IndexOutOfBoundsException e) {
+                } catch (NumberFormatException e) {
                     response.sendRedirect(request.getContextPath() + "/music?error=invalid_id");
                 }
             } else {
@@ -91,70 +106,74 @@ public class UserMusicServlet extends HttpServlet {
     protected void doPost(HttpServletRequest request, HttpServletResponse response) 
             throws ServletException, IOException {
         String path = request.getServletPath();
+        String musicIdParam = request.getParameter("musicId");
+        String commentText = request.getParameter("commentText");
 
-        if ("/music-detail".equals(path)) {
-            String idParam = request.getParameter("musicId");
-            String commentText = request.getParameter("commentText");
+        User user = (User) request.getSession().getAttribute("user");
+        if (user == null) {
+            String redirectUrl = "/music".equals(path) ? request.getRequestURI() : request.getRequestURI() + "?id=" + musicIdParam;
+            request.getSession().setAttribute("redirectAfterLogin", redirectUrl);
+            response.sendRedirect(request.getContextPath() + "/login");
+            return;
+        }
 
-            User user = (User) request.getSession().getAttribute("user");
-            if (user == null) {
-                request.getSession().setAttribute("redirectAfterLogin", request.getRequestURI() + "?id=" + idParam);
-                response.sendRedirect(request.getContextPath() + "/login");
-                return;
-            }
+        if (musicIdParam != null && commentText != null && !commentText.trim().isEmpty()) {
+            try {
+                int musicId = Integer.parseInt(musicIdParam);
+                boolean success = commentController.addComment(musicId, user.getId(), user.getUsername(), commentText.trim());
 
-            if (idParam != null && commentText != null && !commentText.trim().isEmpty()) {
-                try {
-                    int musicId = Integer.parseInt(idParam);
-                    boolean success = commentController.addComment(
-                        musicId,
-                        user.getId(),
-                        user.getUsername(),
-                        commentText.trim()
-                    );
-                    if (success) {
-                        // Refresh the page with the updated comments
+                if (success) {
+                    if ("/music".equals(path)) {
+                        response.sendRedirect(request.getContextPath() + "/music");
+                    } else if ("/music-detail".equals(path)) {
                         response.sendRedirect(request.getContextPath() + "/music-detail?id=" + musicId);
-                    } else {
-                        // Set error and forward to JSP
+                    }
+                } else {
+                    if ("/music".equals(path)) {
+                        List<Music> musicList = musicController.getAllData();
+                        Map<Integer, List<Celebrity>> musicCelebritiesMap = new HashMap<>();
+                        for (Music music : musicList) {
+                            List<Integer> celebrityIds = music.getCelebrityIds();
+                            List<Celebrity> celebrities = (celebrityIds != null && !celebrityIds.isEmpty()) ? 
+                                celebrityController.getCelebritiesByIds(celebrityIds) : 
+                                Collections.emptyList();
+                            musicCelebritiesMap.put(music.getId(), celebrities != null ? celebrities : Collections.emptyList());
+                        }
+                        request.setAttribute("musicList", musicList);
+                        request.setAttribute("musicCelebritiesMap", musicCelebritiesMap);
+                        request.setAttribute("error_" + musicId, "Failed to post comment. Please try again.");
+                        request.getRequestDispatcher("/user-side/music.jsp").forward(request, response);
+                    } else if ("/music-detail".equals(path)) {
                         List<Music> musicList = musicController.getMusicById(musicId);
                         Music music = musicList.isEmpty() ? null : musicList.get(0);
                         List<MusicComment> comments = commentController.getCommentsByMusicId(musicId);
+                        List<Integer> celebrityIds = music != null ? music.getCelebrityIds() : Collections.emptyList();
+                        List<Celebrity> celebrities = (celebrityIds != null && !celebrityIds.isEmpty()) ? 
+                            celebrityController.getCelebritiesByIds(celebrityIds) : 
+                            Collections.emptyList();
                         request.setAttribute("music", music);
-                        request.setAttribute("comments", comments != null ? comments : List.of());
+                        request.setAttribute("comments", comments != null ? comments : Collections.emptyList());
+                        request.setAttribute("celebrities", celebrities != null ? celebrities : Collections.emptyList());
                         request.setAttribute("error", "Failed to post comment. Please try again.");
                         request.getRequestDispatcher("/user-side/music-detail.jsp").forward(request, response);
                     }
-                } catch (NumberFormatException e) {
-                    response.sendRedirect(request.getContextPath() + "/music?error=invalid_id");
                 }
-            } else {
-                response.sendRedirect(request.getContextPath() + "/music-detail?id=" + idParam + "&error=invalid_input");
+            } catch (NumberFormatException e) {
+                response.sendRedirect(request.getContextPath() + "/music?error=invalid_id");
             }
         } else {
-            doGet(request, response);
+            if ("/music".equals(path)) {
+                response.sendRedirect(request.getContextPath() + "/music?error=invalid_input");
+            } else if ("/music-detail".equals(path) && musicIdParam != null) {
+                response.sendRedirect(request.getContextPath() + "/music-detail?id=" + musicIdParam + "&error=invalid_input");
+            } else {
+                response.sendRedirect(request.getContextPath() + "/music?error=invalid_input");
+            }
         }
     }
 
     @Override
     public void destroy() {
-        // Cleanup if needed
         super.destroy();
-    }
-
-    private int getUserIdByUsername(String username) {
-        String sql = "SELECT id FROM users WHERE username = ?";
-        try (Connection conn = DatabaseConnection.getConnection();
-             PreparedStatement pstmt = conn.prepareStatement(sql)) {
-            pstmt.setString(1, username);
-            try (ResultSet rs = pstmt.executeQuery()) {
-                if (rs.next()) {
-                    return rs.getInt("id");
-                }
-            }
-        } catch (SQLException e) {
-            System.err.println("Error fetching userId for username " + username + ": " + e.getMessage());
-        }
-        return -1; // Indicates failure to find user
     }
 }
